DHIS gets an adjustment and a single TODO since it already treated the DBB as a queue.